# UK_Gazetteer

./: .gitignore  README.md  gazetteer_client.py  ingest.py  main.py  mcp_server.py  pyproject.toml  requirements.txt
